feat: componente home

--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -16,6 +16,6 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
-        <!-- Conteúdo da página -->
+        <app-home></app-home>
     </mat-sidenav-content>
 </mat-sidenav-container>
