--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header mat-elevation-z4">
+<mat-toolbar class="header mat-elevation-z8">
     <span>
         <a>
             <img class="logo"src="assets/img/logo.png" alt="logo">
@@ -9,7 +9,7 @@
             <i class="material-icons">
                 home
             </i>
-            Aplicação CRUD Angular 9
+            Início
         </a>
     </span>
 </mat-toolbar>
