refactor: uso de diretivas para o coração

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="footer">
     <span>
         Desenvolvido com
-        <i class="material-icons red v-middle">
+        <i class="material-icons v-middle" appRed>
             favorite
         </i>
         por <a href="https://github.com/GiovanneMika" class="git" target="_blank">Givas<img src="https://cdn.worldvectorlogo.com/logos/git.svg" style="height: 12px;" alt=""></a>
