--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,11 +10,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.red {
-    color: red;
-}
-
-.red:hover {
+.heart:hover {
     color: darkred;
     animation: heartbeat 1s infinite;
 
@@ -30,11 +26,11 @@ body {
     }
 
     25% {
-        transform: scale(1.1);
+        transform: scale(1.25);
     }
 
     50% {
-        transform: scale(1.3);
+        transform: scale(1.5);
     }
 
     100% {
