--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -10,7 +10,7 @@
     </form>
     <div class="button-container">
         <button mat-raised-button (click)="createProduct()" color="primary">
-            Novo Produto
+            Criar Produto
         </button>
         <button mat-raised-button (click)="cancel()" color="warn">
             Cancelar
