--- a/frontend/src/app/components/template/footer/footer.component.css
+++ b/frontend/src/app/components/template/footer/footer.component.css
@@ -11,7 +11,7 @@
     display: flex;
     position: fixed;
     bottom: 0;
-    justify-content: center;
+    justify-content: end;
     font-size: 1em;
 }
 
