--- a/frontend/src/app/components/product/product-read/product-read.component.css
+++ b/frontend/src/app/components/product/product-read/product-read.component.css
@@ -1,3 +1,14 @@
 table {
   width: 100%;
 }
+
+.edit {
+    margin-right: 10px;
+}
+
+.edit > i{
+    color: #3F51B5;
+}
+.delete > i{
+    color: #f44336;
+}
