--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -27,7 +27,7 @@
                         edit
                     </i>
                 </a>
-                <a routerLink="" class="delete">
+                <a routerLink="/products" (click)="deleteProduct(row.id)" class="delete">
                     <i class="material-icons">
                         delete
                     </i>
