--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -10,7 +10,7 @@
     </form>
     <div class="button-container">
         <button mat-raised-button (click)="updateProduct()" color="primary">
-            Salvar
+            Atualizar
         </button>
         <button mat-raised-button (click)="cancel()" color="warn">
             Cancelar
