--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,19 +1,21 @@
 <mat-card class="mat-card">
     <mat-card-title>Novo Produto</mat-card-title>
-    <form>
+    <form #productForm="ngForm">
         <mat-form-field>
-            <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
+            <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name" required #name="ngModel">
+            <mat-error *ngIf="name.invalid && name.touched">Nome é obrigatório</mat-error>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.price" name="price">
+            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.price" name="price" required #price="ngModel" type="number" min="0">
+            <mat-error *ngIf="price.invalid && price.touched">Preço é obrigatório</mat-error>
         </mat-form-field>
+        <div class="button-container">
+            <button mat-raised-button (click)="createProduct()" color="primary" [disabled]="!productForm.valid">
+                Criar Produto
+            </button>
+            <button mat-raised-button (click)="cancel()" color="warn">
+                Cancelar
+            </button>
+        </div>
     </form>
-    <div class="button-container">
-        <button mat-raised-button (click)="createProduct()" color="primary">
-            Criar Produto
-        </button>
-        <button mat-raised-button (click)="cancel()" color="warn">
-            Cancelar
-        </button>
-    </div>
 </mat-card>
